Add historical CALL and PUT outlook
